[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
fnv = "1.0"
geo = "0.32.0"
itertools = "0.14"
ndarray = { version = "0.17.1", features = ["rayon"] }
ndarray-linalg = { version = "0.18.0", features = ["openblas-system"] }
rayon = "1.11"
